fixed spacing

--- a/aiverify-portal/app/models/upload/components/Uploader.module.css
+++ b/aiverify-portal/app/models/upload/components/Uploader.module.css
@@ -23,7 +23,7 @@
   cursor: pointer;
   white-space: nowrap;
   background-color: var(--color-secondary-900);
-  margin-left: 40px;
+  margin-left: 20px;
 }
 
 .fileInput {
